Install Ionicons and adjust styling

--- a/client/app/index.scss
+++ b/client/app/index.scss
@@ -72,15 +72,16 @@
 /* ––––––––––––––––––––––––––––––––––––––––––––––– */
 
 
-  /**
+/**
  *  If you want to override some bootstrap variables, you have to change values here.
  *  The list of variables are listed here bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss
  */
-$navbar-inverse-link-color: #5AADBB;
-$icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
-$fa-font-path: "../../bower_components/font-awesome/fonts";
-@import "../../bower_components/font-awesome/scss/font-awesome.scss";
 
+$icon-font-path:      "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
+$fa-font-path:        "../../bower_components/font-awesome/fonts";
+$ionicons-font-path:  "../../bower_components/Ionicons/fonts";
+@import "../../bower_components/font-awesome/scss/font-awesome.scss";
+@import "../../bower_components/Ionicons/scss/ionicons.scss";
 
 
 
