--- a/client/app/core/style/base/_base.scss
+++ b/client/app/core/style/base/_base.scss
@@ -1,81 +1,61 @@
-/* Yeoman Generated Styles
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/**
+ * Base
+ *
+ * @description
+ *
+ */
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+@import 'fonts';
+@import 'typography';
+@import 'animations';
+@import 'shadows';
+
+
+
+
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.thumbnail {
-  height: 200px;
-
-  img.pull-right {
-    width: 50px;
+body {
+  &.drivers,
+  &.constructors,
+  &.races,
+  &.overview {
+    background-color: #f3f3f3;
   }
 }
 
-/* ––––––––––––––––––––––––––––––––––––––––––––––– */
 
 
 
-
-
-
-
-
-/* Typography
+/*  Twitter Bootstrap
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
 
-@font-face {
-  font-family: "Ionicons";
-  src: url("../../fonts/ionicons.eot?v=2.0.0");
-  src: url("../../fonts/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=2.0.0") format("truetype"), url("../fonts/ionicons.woff?v=2.0.0") format("woff"), url("../fonts/ionicons.svg?v=2.0.0#Ionicons") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+//  Reset and dependencies
+// ------------------------------
 
-.fa, .ion {
-  display: inline-block;
-  font-size: inherit;
-  speak: none;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  font-feature-settings: 'liga';
-}
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/print';
 
-.fa {
-  font-stretch: normal;
-  font-style: normal;
-  font-variant: normal;
-  font-size: 14px/1;
-  font-family: 'FontAwesome';
-}
 
-.ion {
-  font-size: 1.15em;
-  font-stretch: normal;
-  font-style: normal;
-  font-variant: normal;
-  font-variant-numeric: normal;
-  font-size: 15px/1;
-  font-family: 'Ionicons';
-  text-transform: none;
-  text-align: center;
-  &:before {
-    font-size: inherit !important;
-    display: inline !important;
-    line-height: inherit !important;
-  }
-}
+//  Core CSS
+// ------------------------------
+
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons';
+
+
+//  Utility classes
+// ------------------------------
+
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities';
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities';
+
+/*  End Twitter Bootstrap –––––––––––––––––––––––– */
